--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix client",
+    "server": "node server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "trizca",
