--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "trizca",
@@ -15,6 +15,7 @@
     "concurrently": "^4.1.2",
     "config": "^3.2.2",
     "express": "^4.17.1",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.6.9",
+    "nodemon": "^1.19.1"
   }
 }
