--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "trizca",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
     "config": "^3.2.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.9",
     "nodemon": "^1.19.1"
   }
